theme-academy_clean: Reduced the z-index of the navbar to stop it appearing infront of the Snipcart pop-up shopping cart close button.

--- a/theme/academy_clean/style/academy.css
+++ b/theme/academy_clean/style/academy.css
@@ -78,7 +78,7 @@ div#page {
   margin-bottom: 0;
 }
 .navbar-fixed-top {
-    
+    z-index: 100; // display behind the snipcart pop-up
 }
 .navbar-inverse .navbar-inner,
 .navbar-inner {
